@@ -156,6 +156,7 @@ Version 1.5.2 - CVS
     (#1568355).
   - Added PHP pspell extension support to squirrelspell plugin.
   - Add CEST and MEST (non-standard) timezone codes for +0200.
+  - Add support for SpamAssassin's X-Spam-Status header (#1589520).
 
 Version 1.5.1 (branched on 2006-02-12)
 --------------------------------------
